Remove Hanabi & get Wasm working on gitpod

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,6 @@
 
 # [target.x86_64-unknown-linux-gnu]
 # rustflags = ["-C", "link-arg=-fuse-ld=lld", "-Zshare-generics=y"]
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
