--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 # TODO: Remove dynamic_linking feature on release
 bevy = { version = "0.12.0" }
 # bevy-inspector-egui = "0.21.0"
-bevy_hanabi = "0.8.0"
-bevy_xpbd_2d = { version = "0.3", default-features = false, features = [ "2d", "f64", "parallel", "enhanced-determinism" ] }
+# bevy_hanabi = "0.8.0"
+bevy_xpbd_2d = { version = "0.3", default-features = false, features = [ "2d", "f64" ] }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
@@ -18,4 +18,4 @@ opt-level = 1
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
-opt-level = 3
+opt-level = 1
