--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 # TODO: Remove dynamic_linking feature on release
 bevy = { version = "0.12.0" }
+bevy_particle_systems = "0.11.0"
 # bevy-inspector-egui = "0.21.0"
 # bevy_hanabi = "0.8.0"
 bevy_xpbd_2d = { version = "0.3", default-features = false, features = [ "2d", "f64" ] }
@@ -18,4 +19,4 @@ opt-level = 1
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
-opt-level = 1
+opt-level = 3
