--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "SpaceRoyale"
+name = "space_royale"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,12 +7,13 @@ edition = "2021"
 
 [dependencies]
 # TODO: Remove dynamic_linking feature on release
-bevy = { version = "0.12.0" }
-bevy_particle_systems = "0.11.0"
+bevy = { version = "0.12" }
+bevy_particle_systems = "0.11"
 # bevy-inspector-egui = "0.21.0"
 # bevy_hanabi = "0.8.0"
 bevy_xpbd_2d = { version = "0.3", default-features = false, features = [ "2d", "f64" ] }
-rand = "0.8.5"
+rand = "0.8"
+serde = { version = "1", features = ["derive"] }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
